--- a/app/assets/stylesheets/carpool.scss
+++ b/app/assets/stylesheets/carpool.scss
@@ -29,3 +29,17 @@
     }
   }
 }
+
+#carpool {
+  .attendees {
+    ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+
+    h3 {
+      margin-bottom: 0;
+    }
+  }
+}
