--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -39,6 +39,10 @@
         <%= link_to 'View Details', carpool_path(carpool) %>
         <% end %>
 
+        <% if current_user.rides.include?(carpool) %>
+        <%= link_to 'Leave Carpool', leave_carpool_path(carpool_id: carpool.id), method: :patch, data: {confirm: 'Are you sure you want to leave this carpool?'} %>
+        <% end %>
+
         <%  if carpool.driver_id == current_user.id %>
         <%= link_to 'Cancel Carpool', destroy_carpool_path(carpool_id: carpool.id), method: :delete, data: {confirm: 'Are you sure you want to leave this carpool? You are the driver.'} %>
         <% end %>
