--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,7 +22,7 @@
           <%= project.location.zip %>
         </p>
         <h4>Project Description</h4>
-        <span><%= project.description%></span>
+        <span><%= project.description.length > 128 ? project.description.slice(0,127) + "…" : project.description %></span>
       </div>
       <section id="join_button-<%= project.id %>"><%= button_to 'Join the Project', project_path(project), method: :get %>
       </section>
