Ensure all project headlines at least 2 lines tall

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -20,6 +20,7 @@
       font-family: 'News Cycle', sans-serif;
       font-size: 20pt;
       text-align: center;
+      min-height: 7ex;
     }
 
     img {
